--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-under construction :)
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shawn Spears</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+<body>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <h1>Hi, my name is Shawn!</h1>
+          <p>under construction :)</p>
+        </div>  
+        <div class="col-6">
+          <img
+            class="img-fluid"
+            src="images/code_typing.svg"
+            alt="triangle with all three sides equal" />
+        </div>
+      </div>
+    </div>
+</body>
+</html>
