--- a/index.html
+++ b/index.html
@@ -1,26 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shawn Spears</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shawn Spears</title>
+  <link rel="stylesheet" href="styles/styles.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
 </head>
 <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-6">
-          <h1>Hi, my name is Shawn!</h1>
-          <p>under construction :)</p>
-        </div>  
-        <div class="col-6">
-          <img
-            class="img-fluid"
-            src="images/code_typing.svg"
-            alt="triangle with all three sides equal" />
-        </div>
+
+  <div class="container">
+    <nav class="navbar navbar-expand-md navbar-light py-4">
+      <h1 class="brand">
+        <i class="bi bi-terminal"></i>
+        shawn spears
+      </h1>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="#" class="nav-link">Link 1</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Link 2</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Link 3</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="row py-5">
+      <div class="col-6">
+        <h1 class="brand">Hello World, I'm a Software Engineer located in PDX!</h1>
+        <p>Welcome to my site, feel free to look around :)</p>
+      </div>  
+      <div class="col-6">
+        <img
+          class="img-fluid"
+          src="images/code_typing.svg"
+          alt="A graphic of two people with an HTML tag floating between them" />
       </div>
     </div>
+  </div>
 </body>
 </html>
