Add headshot to images, initial implementation of about me section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
 </head>
 <body>
-
   <div class="container">
     <nav class="navbar navbar-expand-md navbar-light py-4">
       <h1 class="brand">
@@ -23,27 +22,58 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="#" class="nav-link">Link 1</a>
+            <a href="#about-me" class="nav-link">About</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Link 2</a>
+            <a href="#" class="nav-link">Work</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Link 3</a>
+            <a href="#" class="nav-link">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
     <div class="row py-5">
-      <div class="col-6">
+      <div class="col-12 col-md-6">
         <h1 class="brand">Hello World, I'm a Software Engineer located in PDX!</h1>
         <p>Welcome to my site, feel free to look around :)</p>
+        <button type="button" class="btn btn-primary">more about me</button>
+        <button type="button" class="btn btn-outline-secondary">
+          get in touch
+          <i class="bi bi-forward-fill"></i>
+        </button>
       </div>  
-      <div class="col-6">
+      <div class="col-12 col-md-6">
         <img
-          class="img-fluid"
+          class="img-fluid graphic-1"
           src="images/code_typing.svg"
           alt="A graphic of two people with an HTML tag floating between them" />
+      </div>
+    </div>
+    <div class="row py-5 mt-5">
+      <div class="col-12 col-md-5">
+        <img
+          class="img-fluid"
+          src="images/headshot.png"
+          alt="A graphic of two people with an HTML tag floating between them" />
+      </div>
+      <div class="about-me col-12 col-md-7 p-5">
+        <h2 id="about-me">Hi, my name is Shawn</h2>
+        <h4>(she/her)</h4>
+        <p class="mt-5">
+          I am a recent graduate from Portland State University with a B.S. in Computer Science.
+          I’ve had the opportunity to gain industry experience at a few different companies in the
+          region where I’ve applied the skills I’ve learned in my degree to both frontend and backend
+          systems.
+          In my free time, I enjoy learning more about design and how it affects a range of areas from
+          the products we use to the urban planning of our cities. The intersection between design and
+          technology has always interested me and at the moment I am working on expanding my knowledge
+          within the field of UX so that the software I make provides a positive experience. If you 
+          think that my skills can add value to your company please feel free to reach out!
+        </p>
       </div>
     </div>
   </div>
