--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#about-me" class="nav-link">About</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Work</a>
+            <a href="#work-section" class="nav-link">Work</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Projects</a>
@@ -40,7 +40,7 @@
       <div class="col-12 col-md-6">
         <h1 class="brand">Hello World, I'm a Software Engineer located in PDX!</h1>
         <p>Welcome to my site, feel free to look around :)</p>
-        <button type="button" class="btn btn-primary">more about me</button>
+        <a class="btn btn-primary" href="#work-section" role="button">resume</a>
         <button type="button" class="btn btn-outline-secondary">
           get in touch
           <i class="bi bi-forward-fill"></i>
@@ -74,8 +74,90 @@
           within the field of UX so that the software I make provides a positive experience. If you 
           think that my skills can add value to your company please feel free to reach out!
         </p>
+      </div>  
+    </div>
+    <div id="work-section" class="row my-5">
+      <h1>Education</h1>
+      <div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <h2>Portland State University</h2>
+            <p>Bachelor of Science, Computer Science <mark>4.0 GPA Graduating Fall 2021</mark></p>
+          </li>
+          <li class="list-group-item">
+            <h2>University of California, Santa Barbara</h2>
+            <p>Bachelor of Science, Biology</p>
+            <p>Minor, Japanese Art History</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div id="work-section" class="row my-5">
+      <h1>Work</h1>
+      <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              <div>
+                <h2>Oracle</h2>
+                <h3>Software Engineer Intern</h3>
+              </div>
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <ul>
+                <li>Develop various custom client facing applications for our Enterprise level customers utilizing Java and Python</li>
+                <li>Experience with leading the development of a custom client scripting application in Java</li>
+                <li>Collaborate daily with members on the Extended Engineering Services team utilizing GitHub Organizations</li>
+                <li>Participate in various aspects of the Agile software development process from daily standup and scoping to Engineering all-hands and company wide retrospectives</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              <div>
+                <h2>Jama Software</h2>
+                <h3>Software Engineer Intern</h3>
+              </div>
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <ul>
+                <li>Developed various custom client facing applications for our Enterprise level customers utilizing Java and Python</li>
+                <li>Experience with leading the development of a custom client scripting application in Java</li>
+                <li>Collaborated daily with members on the Extended Engineering Services team utilizing GitHub Organizations</li>
+                <li>Participated in various aspects of the Agile software development process from daily standup and scoping to Engineering all-hands and company wide retrospectives</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              <div>
+                <h2>Cayuse</h2>
+                <h3>QA Intern</h3>
+              </div>
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <ul>
+                <li>Performed automated end-to-end tests for a suite of applications using Protractor with TypeScript</li>
+                <li>Assisted with the research and adoption of the latest automation framework technologies to utilize</li>
+                <li>Collaborated across the application teams in QA alongside the use of management tools Jira and qTest </li>
+                <li>Participated in various aspects of the Agile software development process from daily standup to PI planning</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
