Add a contact form

--- a/index.html
+++ b/index.html
@@ -201,11 +201,29 @@
         </button>
       </div>
     </div>
+    <div class="row my-5">
+      <h1>Contact Me</h1>
+      <form id="contact-form">
+        <div class="row mb-3">
+          <div class="col">
+            <label for="name" class="form-label">Name</label>
+            <input type="text" class="form-control" id="name" placeholder="This could be you!">
+          </div>
+          <div class="col">
+            <label for="Email" class="form-label">Email</label>
+            <input type="text" class="form-control" id="email" placeholder="hello@gmail.com">
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="reset" class="btn btn-outline-primary">Reset</button>
+      </form>
+    </div>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-4 d-flex align-items-center">
-        <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-        </a>
         <span class="text-muted">&copy; 2021 Shawn Spears</span>
       </div>
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
