Add dates to internships

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <h1 class="brand">Hello World, I'm a Software Engineer located in PDX!</h1>
         <p>Welcome to my site, feel free to look around :)</p>
         <a class="btn btn-primary" href="#work-section" role="button">resume</a>
-        <button type="button" class="btn btn-outline-secondary">
+        <a class="btn btn-outline-secondary" href="#contact-form" role="button">
           get in touch
           <i class="bi bi-forward-fill"></i>
-        </button>
+        </a>
       </div>  
       <div class="col-12 col-md-6">
         <img
@@ -101,16 +101,16 @@
               <div>
                 <h2>Oracle</h2>
                 <h3>Software Engineer Intern</h3>
+                <h4>July 2021 - October 2021</h4>
               </div>
             </button>
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
               <ul>
-                <li>Develop various custom client facing applications for our Enterprise level customers utilizing Java and Python</li>
-                <li>Experience with leading the development of a custom client scripting application in Java</li>
-                <li>Collaborate daily with members on the Extended Engineering Services team utilizing GitHub Organizations</li>
-                <li>Participate in various aspects of the Agile software development process from daily standup and scoping to Engineering all-hands and company wide retrospectives</li>
+                <li>Contributed to managing client data through Apache Kafka clusters</li>
+                <li>Collaborated on a new ML trainer and model for our data pipeline</li>
+                <li>Participated in various aspects of the Agile software development process from daily standup and scoping to Engineering all-hands and company wide retrospectives</li>
               </ul>
             </div>
           </div>
@@ -121,6 +121,7 @@
               <div>
                 <h2>Jama Software</h2>
                 <h3>Software Engineer Intern</h3>
+                <h4>February 2021 - June 2021</h4>
               </div>
             </button>
           </h2>
@@ -141,6 +142,7 @@
               <div>
                 <h2>Cayuse</h2>
                 <h3>QA Intern</h3>
+                <h4>July 2020 - December 2020</h4>
               </div>
             </button>
           </h2>
@@ -163,7 +165,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
             <img src="images/hamburger.svg" class="d-block mx-auto w-50" alt="...">
-            <h1 class="text-center mt-4">
+            <h1 class="project-title text-center mt-4">
               <a class="text-reset text-decoration-none" href="https://github.com/Vegify-Capstone-Team/vegify">
                 <i class="bi bi-github"></i>
                 Vegify
@@ -178,7 +180,7 @@
           </div>
           <div class="carousel-item" data-bs-interval="10000">
             <img src="images/breakfast.svg" class="d-block mx-auto w-50" alt="...">
-            <h1 class="text-center mt-4">
+            <h1 class="project-title text-center mt-4">
               <a class="text-reset text-decoration-none" href="https://github.com/michaeltothewilson/nutri">
                 <i class="bi bi-github"></i>
                 Nutri
@@ -215,8 +217,8 @@
           </div>
         </div>
         <div class="mb-3">
-          <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <label for="contact-form" class="form-label">Message</label>
+          <textarea class="form-control" id="contact-form" rows="3"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
         <button type="reset" class="btn btn-outline-primary">Reset</button>
